--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <h1 id="h1">Mohammed Ashiq</h1>
     <div id="button" class="button">
-      <img src="Ashiq.jpg" alt="">
+      <img src="Ashiq.png" alt="">
     </div>
 
   </header>
@@ -121,11 +121,10 @@
       <a href="#"><i id="e11" class="fa-brands fa-telegram"></i></a>
     </div>
     <hr class="style-six">
-    <p class="endnote">by <a href="https://www.linkedin.com/in/kiruthikkumar/"><strong>Kiruthik Kumar, Vishnubalan -
-          Magnum Team</strong></a></p>
+    <p class="endnote"> <a href="https://www.linkedin.com/in/ashiq993"><strong>©2023 Mohammed Ashiq</strong></a></p>
   </section>
-  <p id="sidename" class="sidename">KIRUTHIK KUMAR</p>
-  <img src="Bgfooter.svg" class="bgfoot" alt="">
+  <p id="sidename" class="sidename">MOHAMMED ASHIQ</p>
+  
   <script type="text/javascript" src="main.js"></script>
 </body>
 
